--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -268,3 +268,18 @@ body, html {
     }
   }
 }
+
+// 列表
+
+.detail{
+  .van-cell{
+      background: #f5f3f4;
+
+    .link{
+          position: absolute;
+    top: 50%;
+    right: 12px;
+    margin-top: -7px;
+      }
+    }
+  }
