--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -12,6 +12,9 @@ body, html {
 .van-cell:not(:last-child)::after{
   border-bottom 0
   }
+  .van-cell {
+    border-bottom: 1px solid #ebedf0;
+}
 .van-tabbar-item--active{
   color:#4fd6bc;
   
