陪护床详情、陪护床解绑、月份统计

--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -136,8 +136,13 @@ body, html {
   color: #4fd6bc;
 }
 // 客服服务
+.van-dialog .van-button{
+     height: 40px;
+    line-height: 40px;
+  }
 .van-dialog__confirm,
 .van-dialog__confirm:active {
+   
   color: #4fd6bc;
   border-left: 1px solid #ebedf0 !important;
 }
