--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -67,11 +67,7 @@ body, html {
 .van-overlay{
       background-color: rgba(0,0,0,.5);
   }
-.way {
-  .van-overlay {
-    display: none;
-  }
-}
+
 // 护士端
 .van-collapse-item {
   .van-cell {
@@ -221,14 +217,8 @@ body, html {
       }
 
 // 首页
-      .way {
-  .van-popup {
-    display: block !important;
-    width: 200px;
-    height: 302px;
-    background: #f5f3f4;
-    z-index 10 !important
-  }
+      .wayPop {
+
   .light {
     height: 20px;
     width: 15px;
@@ -257,6 +247,7 @@ body, html {
           line-height: 25px;
     }
   }
+}
   .pleaseSelect {
     width: 100%;
     position: fixed;
@@ -275,7 +266,6 @@ body, html {
       color: #ccc;
     }
   }
-}
 
 // 列表
 
